kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: three-tier-app

spec:
  selector:
    app: frontend

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
